@@ -1,3 +1,8 @@
+1998-11-01  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>
+
+	* emacs.scm (format): Bugfix: Handle multiple arguments
+	correctly.  (Thanks to Thien-Thi Nguyen.)
+
 1998-11-01  Mikael Djurfeldt  <mdj@barbara.nada.kth.se>
 
 	* boot-9.scm (exit-hook): New hook: Is run at the very end of an
